[package]
name = "astu_service_tip_in_enrichment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.2"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
